# src/auth/auth.controller.ts
@@ -1,9 +1,10 @@
-import { Body, Controller, Post, Header } from '@nestjs/common';
+import { Body, Controller, Post, Header, Get } from '@nestjs/common';
 import { AuthService } from './auth.service';
 import { CreateUserDto } from './dto/create-user.dto';
 import { User } from 'src/entities/user.entity';
 import { CredentialsDto } from './dto/credentials.dto';
 import { ApiOperation, ApiResponse, ApiTags } from '@nestjs/swagger';
+import { TestUser } from './types/testuser';
 
 @ApiTags('auth')
 @Controller('auth')
@@ -30,5 +31,19 @@ export class AuthController {
   ): Promise<{ accessToken: string }> {
     console.log(credentialsDto);
     return await this.authService.signIn(credentialsDto);
+  }
+
+  @Get('users')
+  async users(): Promise<TestUser[]> {
+    const result = [
+      { id: '1', username: 'User001', password: 'password', role: 'USER' },
+      { id: '2', username: 'User002', password: 'password', role: 'USER' },
+      { id: '3', username: 'User003', password: 'password', role: 'USER' },
+      { id: '4', username: 'User004', password: 'password', role: 'ADMIN' },
+      { id: '5', username: 'User005', password: 'password', role: 'ADMIN' },
+      { id: '6', username: 'User006', password: 'password', role: 'ADMIN' },
+    ];
+    console.log(result);
+    return result as TestUser[];
   }
 }
